Migrate project to Java 25 and update dependencies
This migration ensures compatibility with modern Java 25+ features:

- Changed Java version in pom.xml and README.md
- Updated various dependencies to their latest versions, e.g. Spring Boot
- Replaced javax imports with jakarta imports for compatibility
- Implemented custom logback evaluator to remove deprecated Janino dependency
- Removed other deprecated dependencies and configurations